test/e2e/jupyter-notebook/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: example-ingress
  namespace: nemo
spec:
  ingressClassName: nginx
  rules:
  - host: nemo.test
    http:
      paths:
      - backend:
          service:
            name: nemoentitystore-sample
            port:
              number: 8000
        path: /v1/namespaces
        pathType: Prefix
      - backend:
          service:
            name: nemoentitystore-sample
            port:
              number: 8000
        path: /v1/projects
        pathType: Prefix
      - backend:
          service:
            name: nemoentitystore-sample
            port:
              number: 8000
        path: /v1/datasets
        pathType: Prefix
      - backend:
          service:
            name: nemoentitystore-sample
            port:
              number: 8000
        path: /v1/repos
        pathType: Prefix
      - backend:
          service:
            name: nemoentitystore-sample
            port:
              number: 8000
        path: /v1/models
        pathType: Prefix
      - backend:
          service:
            name: nemocustomizer-sample
            port:
              number: 8000
        path: /v1/customization
        pathType: Prefix
      - backend:
          service:
            name: nemoevaluator-sample
            port:
              number: 8000
        path: /v1/evaluation
        pathType: Prefix
      - backend:
          service:
            name: nemoguardrails-sample
            port:
              number: 8000
        path: /v1/guardrail
        pathType: Prefix
  - host: data-store.test
    http:
      paths:
      - backend:
          service:
            name: nemodatastore-sample
            port:
              number: 8000
        path: /
        pathType: Prefix
  - host: nim.test
    http:
      paths:
      - backend:
          service:
            name: meta-llama3-1b-instruct
            port:
              number: 8000
        path: /
        pathType: Prefix
